--- a/MLP/view/view.ui
+++ b/MLP/view/view.ui
@@ -35,6 +35,18 @@
       <height>512</height>
      </size>
     </property>
+    <property name="styleSheet">
+     <string notr="true">QGraphicsView {
+    font: 16pt ;
+	font-weight: bold;
+	color: #670F0F;
+	border-style: solid;
+	border-width: 4px 0px 4px 0px;
+	border-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 #06153D, stop:1 #81A9E3);
+	background-color: white;
+}
+</string>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
